User prefs > Input and Outliner Keymaps mismatch in representation #37077

Closed
opened 2013-10-14 23:16:30 +02:00 by CodeManX · 4 comments
Member

%%%--- Operating System, Graphics card ---
Windows 7

- Blender version with error, and version that worked ---

2.69 RC1

- Short description of error ---
  1. In User prefs, there's map_type "Timer", but there isn't in the outliner. It shows "Keyboard" instead.

  2. In User prefs, the os modifier key is shown as "Cmd", in outliner it is "OS". On windows, both should be OS i suppose.

See attached screenshot

%%%

%%%--- Operating System, Graphics card --- Windows 7 - Blender version with error, and version that worked --- 2.69 RC1 - Short description of error --- 1. In User prefs, there's map_type "Timer", but there isn't in the outliner. It shows "Keyboard" instead. 2. In User prefs, the os modifier key is shown as "Cmd", in outliner it is "OS". On windows, both should be OS i suppose. See attached screenshot %%%
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'

%%%Yuck… Outliner is actually using raw UI draw code here, instead of RNA-based one, so it has to redefine everything (modifier names, event type names, etc.), and is completely out of sync with some current keymaps features. Will try to switch to RNA here!%%%

%%%Yuck… Outliner is actually using raw UI draw code here, instead of RNA-based one, so it has to redefine everything (modifier names, event type names, etc.), and is completely out of sync with some current keymaps features. Will try to switch to RNA here!%%%

%%%Fixed in r60775 by removing this old and half-finished feature from Outliner, as suggested by Brecht. Thanks for the report. :)%%%

%%%Fixed in r60775 by removing this old and half-finished feature from Outliner, as suggested by Brecht. Thanks for the report. :)%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#37077
No description provided.